# LPMBox

./: .gitignore  Cargo.toml  README.md
crates/lpmbox-core/: Cargo.toml
crates/lpmbox-core/src/: app_paths.rs  error.rs  lib.rs  model.rs
crates/lpmbox-device/: Cargo.toml
crates/lpmbox-device/src/: lib.rs
crates/lpmbox-firmware/: Cargo.toml
crates/lpmbox-firmware/src/: flash_plan.rs  guard.rs  lib.rs  patch_plan.rs  scatter.rs  xml_crypto.rs
crates/lpmbox-gui/: Cargo.toml  build.rs
crates/lpmbox-gui/assets/icons/: Source.txt
crates/lpmbox-gui/assets/models/: Source.txt
crates/lpmbox-gui/src/: main.rs
crates/lpmbox-spft/: Cargo.toml
crates/lpmbox-spft/assets/: SPFlashToolV6_tool.txt
crates/lpmbox-spft/src/: lib.rs
docs/community/: TB373FU_Failure_Recovery_Notes.md  TB373FU_Root_AAL_144Hz_Field_Report.md
