[workspace]
members = [
    "crates/lpmbox-core",
    "crates/lpmbox-device",
    "crates/lpmbox-firmware",
    "crates/lpmbox-spft",
    "crates/lpmbox-gui",
]
resolver = "2"

[workspace.package]
version = "3.1.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"

[workspace.dependencies]
ureq = "2"
thiserror = "2"
anyhow = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

roxmltree = "0.21"
quick-xml = "0.38"

aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
sha2 = "0.11"

zip = { version = "8", default-features = false, features = ["deflate"] }

adb_client = { version = "3", features = ["usb"] }
rsa = { version = "0.9", features = ["pem"] }
nusb = "0.2"
pollster = "0.4"

image = { version = "0.25", default-features = false, features = ["png"] }
iced = { version = "0.14", features = ["tokio", "svg", "image", "advanced"] }
tokio = { version = "1", features = ["rt", "macros"] }

rfd = "0.17"
dirs = "6"
open = "5"
semver = "1"
chrono = { version = "0.4", features = ["clock"] }
sys-locale = "0.3"
